Resolves: tdf#97953 spinbuttons are not suitable for reuse as up/down arrows

Change-Id: Ibcd7bd4099210a26513caac6e3b16a88a4c8abad