vcl/inc/spin.hxx
@@ -24,10 +24,19 @@
 
 class Rectangle;
 
+// Draw Spinners as found in a SpinButton. Some themes like gtk3 will draw +- elements here,
+// so these are only suitable in the context of SpinButtons
 void ImplDrawSpinButton(vcl::RenderContext& rRenderContext, vcl::Window* pWindow,
                         const Rectangle& rUpperRect, const Rectangle& rLowerRect,
                         bool bUpperIn, bool bLowerIn, bool bUpperEnabled = true, bool bLowerEnabled = true,
                         bool bHorz = false, bool bMirrorHorz = false);
+
+// Draw Up/Down buttons suitable for use in any context
+void ImplDrawUpDownButtons(vcl::RenderContext& rRenderContext,
+                           const Rectangle& rUpperRect, const Rectangle& rLowerRect,
+                           bool bUpperIn, bool bLowerIn, bool bUpperEnabled = true, bool bLowerEnabled = true,
+                           bool bHorz = false, bool bMirrorHorz = false);
+
 
 #endif // INCLUDED_VCL_INC_SPIN_HXX
 
